# dicom-server-rs

./: .gitignore  Cargo.toml  README-zh-cn.md  README.md  STOW-RS-Test-ALL-DICOM.sh  STOW-RS-Test-ALL-JSON.sh  STOW-RS-Test-LargeDATA.sh  STOW-RS-Test.sh  application.dev-oauth2.json  application.dev.json  application.local-no-oauth2.json  application.local.json  application.mysql.json  application.pg.json  application.test.json  ca.pem  ca_key.pem  client_HZ109999.crt  client_HZ109999.key  client_HZXS2701L6U9Y2OQ.json  dcm1.dcm  dcm2.dcm  dcm3.dcm  dicom-org-cn-client--X.crt  dicom-org-cn-client.crt  dicom-org-cn.pem  metadata.json  test.dcm
Docs/: ApacheDorisTableDefineX.sql  Install.md  Install.sh  Readme.md  application.Sample.json  loader-MedicalStateX.sql
Docs/Install/: docker-compose-withck.yml  docker-compose.yml  docker-compose.yml.withdoris  docker-compose.yml.without-doris
Docs/Install/init-ck/: Clickhouse.sql
Docs/Install/init-scripts/: 01-create-table.sql  02-create-keycloak-db.sql
Docs/Install/rpk-scripts/: init-rpk.sh
Docs/KeyCloak/: ac-test-user.sh  ac-test.sh  config.md  deploy.sh  docker-compose.yml
Docs/KeyCloak/init-scripts/: 01-medical-extensions.sql
SampleUsage/: Readme.md
SampleUsage/dcm_validate/: 1.2.840.113619.2.405.3.2831171869.418.1754040615.617.393.dcm  1.2.840.113619.2.405.3.2831171869.418.1754040615.617.394.dcm  1.2.840.113619.2.405.3.2831171869.418.1754040615.617.395.dcm
SampleUsage/dicom-scu-tools/: NLog.config  appsettings.json
SampleUsage/dicom-server-rs/: application.prod.json
SampleUsage/dicom-server-rs/vdcm3rd/Install/: docker-compose.yml  pg_hba.conf
SampleUsage/dicom-server-rs/vdcm3rd/Install/rpk-scripts/: init-rpk.sh
SampleUsage/dicom-server-rs/vdcmdata/json/1234567890/metadata/20250807/: 1.2.840.113619.2.405.3.2831171869.418.1754040614.941.json
SampleUsage/dicom-server-rs/vdcmdata/json/1234567890/metadata/20250807/1.2.840.113619.2.405.3.2831171869.418.1754040614.941/: 1.2.840.113619.2.405.3.2831171869.418.1754040615.219.6.json
Script/: Doris.sql  MySQL.sql  Pg.sql  Readme.md  create-queue.sh
certs/: gen.sh  keycloak.medical.org.crt
change-transfer-kafka/: Cargo.toml
change-transfer-kafka/src/: change_consumer.rs  change_file_transfer.rs  main.rs
charset-helper/: Cargo.toml
charset-helper/src/: main.rs
common/: Cargo.toml  application.dev.json  application.test.json
common/src/: ca_helper.rs  cert_helper.rs  change_file_transfer.rs  cornerstonejs.rs  database_entities.rs  database_factory.rs  database_provider.rs  database_provider_base.rs  db_provider.rs  dbprovider_mysql.rs  dbprovider_pg.rs  dicom_file_handler.rs  dicom_json_helper.rs  dicom_object_meta.rs  dicom_utils.rs  encrypt_helper.rs  entities.rs  extraction_error.rs  file_utils.rs  kafka_producer_factory.rs  lib.rs  license_manager.rs  logevents.rs  message_sender.rs  message_sender_kafka.rs  mysql_provider.rs  producer_factory.rs  redis_key.rs  server_config.rs  storage_config.rs  string_ext.rs  uid_hash.rs  utils.rs
consumer/: Cargo.toml
consumer-change-transfer-kafka/: Cargo.toml
consumer-change-transfer-kafka/src/: change_consumer.rs  change_file_transfer.rs  main.rs
consumer-storage/: Cargo.toml
consumer-storage-kafka/: Cargo.toml
consumer-storage-kafka/src/: main.rs  storage_consumer.rs
consumer-storage/src/: message_processor.rs
consumer/src/: main.rs  message_dispatcher.rs  message_processor.rs
database/: Cargo.toml
database/src/: dicom_access_log.rs  dicom_dbprovider.rs  dicom_dbtype.rs  dicom_meta.rs  dicom_mysql.rs  dicom_mysql_types.rs  dicom_pg.rs  dicom_pg_types.rs  lib.rs
dicom-encrypt/: Cargo.toml
dicom-encrypt/src/: main.rs
license-server/: Cargo.toml
license-server/src/: cert_helper.rs  main.rs  register_controller.rs
logstate/: Cargo.toml
logstate/src/: LogPublish.rs  lib.rs  log_entity.rs  log_publish.rs
mysql-demo/: Cargo.toml
mysql-demo/src/: main.rs
mysql-scripts/: 0-Diros.sql  0-InitMySQL.sql
permission-macros/: Cargo.toml
permission-macros/src/: lib.rs
storescp/: Cargo.toml  application.dev.json
storescp/src/: dicom_file_handler.rs  main.rs  producer.rs  store_async.rs  store_sync.rs
wado-consumer/: Cargo.toml
wado-consumer/src/: main.rs  storage_consumer.rs
wado-license/: Cargo.toml  Gen-CA.md  License.md  Readme.md  generate-tls-certs.sh
wado-license/src/: client_register.rs  handlers.rs  main.rs  register_controller.rs
wado-license/tls-certs/: ca.crt  ca.key  encrypt-private.key  encrypt-public.pem  license-sign-private.pem  license-sign-public.der  license-sign-public.pem  server.conf  server.crt  server.key
wado-server/: Cargo.toml  application.dev.json
wado-server/Docs/: Readme.md  localhost.crt  localhost.key  localhost.pfx
wado-server/src/: apilog_middleware_kc.rs  auth_information.rs  auth_middleware.rs  auth_middleware_kc.rs  background.rs  common_controller.rs  common_utils.rs  constants.rs  main.rs  payload_helper.rs  payload_split.rs  redis_helper.rs  server_config.rs  stow_rs_controller_v1.rs  wado_rs_controller.rs  wado_rs_controller_v1.rs  wado_rs_models.rs
wado-storescp/: Cargo.toml
wado-storescp/src/: dicom_file_handler.rs  main.rs  store_async.rs  store_sync.rs
wado-utils/: Cargo.toml
wado-utils/src/: helper.rs  lib.rs
wado-webworker/: Cargo.toml
wado-webworker/src/: background.rs  json_creator.rs  main.rs
