[workspace]
members = [
    "wado-server",
    "wado-storescp",
    "common",
    "wado-consumer",
    "mysql-demo",
    "database", "permission-macros", "wado-webworker"]

# use edition 2021 resolver
resolver = "2"
[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[workspace.dependencies]
# 共享的依赖版本定义
md5 = "0.8.0"
const-crc32 = "1.3.0"
snafu = "0.8.9"
uuid = { version = "1.18.1", features = ["v4", "v7", "fast-rng"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
config = "0.15.16"  # 配置文件解析
dotenv = "0.15.0"
clap = { version = "4.5.47", features = ["derive"] }
dicom-core = { version = "0.9.0" }
dicom-ul = { version = "0.9.0", features = ["async"] }
dicom-object = { version = "0.9.0" }
dicom-encoding = { version = "0.9.0" }
dicom-pixeldata = { version = "0.9.0", features = ["native", "jpeg", "rle", "image", "jpegxl", "openjp2", "rayon", "deflate"] }
dicom-dictionary-std = { version = "0.9.0" }
dicom-transfer-syntax-registry = { version = "0.9.0" }
seahash = "4.1.0"
async-trait = "0.1.89"
tracing = "0.1.41"

slog-stdlog = "4.1.1"
slog-scope = "4.4.0"
rdkafka = "0.34.0"

rayon = "1.11.0"
thiserror = "2.0.16"
encoding_rs = "0.8.35"
gdcm_conv = "0.1.7"
rstest = { version = "0.26.1" }



reqwest = { version = "0.12.24", features = ["json"] }
tracing-subscriber = { version = "0.3.20" }
actix-web = "4.11.0"
actix-cors = "0.7.1"
slog = "2.8.1"
slog-term = "2.9.2"
slog-async = "2.8.0"

serde_qs = "0.15.0"

urlencoding = "2.1.3"

futures-util = "0.3.31"
axum = "0.7.9"
tokio = { version = "1.47.1", features = ["full"] }
http = "0.2.12"
http-body-util = "0.1.3"
futures = "0.3.31"
mime = "0.3.17"

chrono = "0.4.42"
deadpool-redis = "0.22.0"
redis = { version = "0.27.6", features = ["tokio-comp"] }
url = "2.5.7"
openssl = { version = "0.10.73", features = ["v102", "vendored"] }  # 自带 OpenSSL，无需额外安装
x509-parser = "0.13.2"  # 请检查最新版本
der = "0.7.10"
pem = "1.1.1"
hex = "0.4.3"        # x509-parser 可能依赖它
regex = "1.11.3"
lazy_static = "1.5.0"
tokio-util = "0.7.16"
aes-gcm = "0.10.3"
rand = "0.8"
base64 = "0.21"
async-stream = "0.3.6"
send_wrapper = "0.6.0"
tempfile = "3.23.0"
tempdir = "0.3.7"
memmap2 = "0.9.9"
install = "0.0.0"
bytes = "1.10.1"
jsonpath-rust = "1.0.4"
jsonpath_lib = "0.3.0"
log = "0.4.28"
actix-multipart = "0.7.2"
memchr = "2.7.6"
dashmap = "5.5" # 高性能并发 Map