[package]
name = "charset-helper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
dicom-core = {  version = "0.9.0" }
dicom-ul = { version = "0.9.0", features = ["async"] }
dicom-object = {  version = "0.9.0" }
dicom-encoding = {  version = "0.9.0" }
dicom-dictionary-std = { version = "0.9.0" }
dicom-transfer-syntax-registry = {  version = "0.9.0" }
snafu = "0.8.9"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio = { version = "1.47.1", features = ["full"] }

rdkafka = "0.34.0"
serde = { version = "1.0.219", features = ["derive"] }

common = { path = "../common" }
serde_json = "1.0.145"
config = "0.15.16"  # 配置文件解析
dotenv = "0.15.0"  # 加载 .env 文件
futures = "0.3.31"
futures-util = "0.3.31"
encoding_rs = "0.8.35"
sqlx = { version = "0.8.6", features = ["mysql", "chrono",
    "runtime-tokio-rustls",
    "mysql",
    "macros",
    "runtime-tokio-native-tls"] }