[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.225", features = ["derive"] }
config = "0.15.16"  # 配置文件解析
dotenv = "0.15.0"
clap = { version = "4.5.47", features = ["derive"] }
dicom-core = {  version = "0.8.2"  }
dicom-ul = { version = "0.8.2", features = ["async"] }
dicom-object = {  version = "0.8.2" }
dicom-encoding = {  version = "0.8.2" }
dicom-dictionary-std = { version = "0.8.1" }
dicom-transfer-syntax-registry = {  version = "0.8.2" }
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = ["mysql", "chrono",
    "runtime-tokio",
    "mysql",
    "macros",
    "runtime-tokio-native-tls"] }
tracing = "0.1.41"
tokio = { version = "1.47.1", features = ["full"] }
urlencoding = "2.1.3"
url = "2.5.7"
slog = "2.7.0"
slog-term = "2.9.2"
slog-async = "2.8.0"
slog-stdlog = "4.1.1"
slog-scope = "4.4.0"
rdkafka = "0.34.0"
futures = "0.3.31"
futures-util = "0.3.31"
chrono = { version = "0.4.42", features = ["serde"] }
rayon = "1.11.0"
thiserror = "2.0.16"
encoding_rs = "0.8.35"
gdcm_conv = "0.1.7"
rstest = { version = "0.26.1"  }
openssl = { version = "0.10.73", features = ["v102", "vendored"] }  # 自带 OpenSSL，无需额外安装
x509-parser = "0.13.2"  # 请检查最新版本
der = "0.7.10"
pem = "1.1.1"
hex = "0.4.3"        # x509-parser 可能依赖它
regex = "1.11.2"
lazy_static = "1.5.0"
tempfile = "3.22.0"
reqwest = { version = "0.11.27", features = ["json"] }