[package]
name = "consumer-storage-kafka"
version = "0.1.0"
edition = "2024"
description = "A DICOM consumer that parse DICOM file tags and save into database."

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
dicom-core = {  version= "0.8.2" }
dicom-ul = {  version = "0.8.2", features = ["async"] }
dicom-object = {  version = "0.8.2" }
dicom-encoding = {  version = "0.8.2" }
dicom-dictionary-std = {  version = "0.8.1" }
dicom-transfer-syntax-registry = {  version = "0.8.2" }
snafu = "0.8"
tracing = "0.1.36"
tracing-subscriber = "0.3.19"
tokio = { version = "1.47.1", features = ["full"] }
rdkafka = {  version = "0.34" , features = ["tokio"]}
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql"] }
common = { path = "../common" }
serde_json = "1.0.142"
config = "0.13"  # 配置文件解析
dotenv = "0.15"  # 加载 .env 文件
futures = "0.3.31"
urlencoding = "2.1.3"
