[package]
name = "license-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.0"
slog = "2.7.0"
slog-term = "2.9.1"
slog-async = "2.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_qs = "0.12"
serde_json = "1.0.141"
urlencoding = "2.1.3"
common = { path = "../common" }
futures-util = "0.3.31"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
http = "0.2.12"
http-body-util = "0.1"
futures = "0.3"
mime = "0.3"
uuid = {  version = "1.18.1", features = ["v4", "v7"]  }
chrono = "0.4.41"
redis = { version = "0.27.6", features = ["tokio-comp"] }
url = "2.5.4"
openssl = { version = "0.10", features = ["vendored"] }  # 自带 OpenSSL，无需额外安装