[package]
name = "license-server"
version = "0.1.0"
edition = "2024"
[profile.release]
lto = true
opt-level = "s"
[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
slog = "2.8.0"
slog-term = "2.8.0"
slog-async = "2.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_qs = "0.15.0"
serde_json = "1.0.145"
urlencoding = "2.1.3"
common = { path = "../common" }
futures-util = "0.3.31"
axum = "0.7.9"
tokio = { version = "1.47.1", features = ["full"] }
http = "0.2.12"
http-body-util = "0.1.3"
futures = "0.3.31"
mime = "0.3.17"
uuid = { version = "1.18.1", features = ["v4", "v7"] }
chrono = "0.4.42"
redis = { version = "0.27.6", features = ["tokio-comp"] }
url = "2.5.7"
openssl = { version = "0.10.73", features = ["v102", "vendored"] }  # 自带 OpenSSL，无需额外安装
x509-parser = "0.13.2"  # 请检查最新版本
der = "0.7.10"
pem = "1.1.1"
hex = "0.4.3"        # x509-parser 可能依赖它
regex = "1.11.3"
lazy_static = "1.5.0"
tokio-util = "0.7.16"
