[package]
name = "mysql-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.225", features = ["derive"] }
config = "0.15.16"  # 配置文件解析
dotenv = "0.15.0"
clap = { version = "4.5.43", features = ["derive"] }
dicom-core = {  version= "0.8.2" }
dicom-ul = {  version = "0.8.2", features = ["async"] }
dicom-object = {  version = "0.8.2" }
dicom-encoding = {  version = "0.8.2" }
dicom-dictionary-std = {  version = "0.8.1" }
dicom-transfer-syntax-registry = {  version = "0.8.2" }
async-trait = "0.1"
sqlx = { version = "0.8.6", features = ["mysql","chrono", "runtime-tokio-native-tls"] }
tracing = "0.1.41"
tokio = { version = "1.47.1", features = ["full"] }
urlencoding = "2.1.3"
url = "2.4"
log = "0.4"
log4rs = "1.0"
rdkafka = "0.34"
futures = "0.3.31"
futures-util = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10.0"
thiserror = "2.0.12"