[package]
name = "storescp"
version = "0.1.0"
authors = ["Victor Saase <vsaase@gmail.com>", "Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2021"
[profile.release]
lto = true
opt-level = "s"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
dicom-core = {  version = "0.8.2" }
dicom-ul = { version = "0.8.2", features = ["async"] }
dicom-object = {  version = "0.8.2" }
dicom-encoding = {  version = "0.8.2" }
dicom-dictionary-std = { version = "0.8.1" }
dicom-transfer-syntax-registry = {  version = "0.8.2" }

tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio = { version = "1.47.1", features = ["full"] }

rdkafka = "0.34.0"
serde = { version = "1.0.225", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql"] }
common = { path = "../common" }
serde_json = "1.0.145"
config = "0.13"  # 配置文件解析
dotenv = "0.15"  # 加载 .env 文件
futures = "0.3.31"
futures-util = "0.3.31"
slog = "2.7.0"
slog-term = "2.9.2"
slog-async = "2.8.0"
openssl = "0.10.73"