[package]
name = "wado-license"
version = "0.1.0"
edition = "2024"
[profile.release]
lto = true
opt-level = "s"
[dependencies]
actix-web = { workspace = true }
actix-cors = { workspace = true }
slog = { workspace = true }
slog-term = { workspace = true }
slog-async = { workspace = true }
serde = { workspace = true }
serde_qs = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }
common = { path = "../common" }
futures-util = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
futures = { workspace = true }
mime = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
redis = { workspace = true }
url = { workspace = true }
openssl = { workspace = true }
x509-parser = { workspace = true }
der = { workspace = true }
pem = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
tokio-util = { workspace = true }
actix-files = "0.6.8"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
rand = "0.9.2"
image = "0.25.8"
captcha = "1.0.0"
rusttype = "0.9.3"
base64 = "0.22.1"
rust-embed = "8.9.0"
mime_guess = "2.0.5"