[package]
name = "wado-storescp"
version = "0.1.0"
authors = ["Victor Saase <vsaase@gmail.com>", "Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2021"

[dependencies]
uuid = { workspace = true }
clap = { workspace = true }
dicom-core = { workspace = true }
dicom-ul = { workspace = true }
dicom-object = { workspace = true }
dicom-encoding = { workspace = true }
dicom-dictionary-std = { workspace = true }
dicom-transfer-syntax-registry = { workspace = true }
dicom-pixeldata = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
slog = { workspace = true }
slog-term = { workspace = true }
slog-async = { workspace = true }
openssl = { workspace = true }
chrono = { workspace = true }
database = { path = "../database" }
common = { path = "../common" }

